--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -160,18 +160,41 @@
 
 .footer_container {
   width: 100%;
-  height: 100px;
-  background-color: var(--headline);
   margin-bottom: 10px;
-  border-radius: 5px;
-  padding: 10px;
-  color: var(--card-tag-text);
-  font-size: 1.5rem;
-  text-align: center;
+}
+.footer_container div {
+  width: 100%;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
+  font-size: 1.5rem;
+  text-align: center;
+  background-color: var(--headline);
+  color: var(--card-tag-text);
+  padding: 15px 10px;
+  border-radius: 5px;
+}
+.footer_container p {
+  width: 100%;
+  text-align: center;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: center;
+}
+.footer_icon {
+  margin: 5px;
+}
+.footer_link {
+  margin: 0px 5px;
+  font-size: 1.3rem;
+  color: var(--headline);
+  background-color: var(--background-main-color);
+  padding: 3px 5px;
+  border-radius: 5px;
+  font-weight: 500;
+  cursor: pointer;
 }
 
 /* ********** RESPONSIVE MENU ********** */
@@ -219,6 +242,9 @@
 }
 
 @media (max-width: 560px) {
+  .footer_container {
+    padding: 0 10px;
+  }
   .hamburger_menu_icon {
     display: flex;
   }
